--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,7 @@ body {
 ul
 {
   list-style-type: none;
+  text-align: center;
 }
 
 #mainFrame{
@@ -14,6 +15,8 @@ ul
 li{
   display: inline-block;
   margin:0px 30px 30px 30px;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 li span{
